# slambook

ch3/useEigen/: CMakeLists.txt
ch3/useGeometry/: CMakeLists.txt
ch3/visualizeGeometry/: CMakeLists.txt
ch4/useSophus/: CMakeLists.txt
ch5/imageBasics/: CMakeLists.txt
ch6/ceres_curve_fitting/: CMakeLists.txt
